# labelflair

./: .editorconfig  .prettierignore  .yamllint.yml  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  action.yml  dist-workspace.toml  justfile  zizmor.yml
.flox/: env.json
.flox/env/: manifest.toml
.github/: labelflair.toml  labels.yml
.github/workflows/: action.yml  ci.yml  github.yml  labelflair.yml  publish.yml  release.yml
crates/labelflair/: Cargo.toml
crates/labelflair-cli/: Cargo.toml
crates/labelflair-cli/src/: commands.rs  main.rs
crates/labelflair-cli/src/commands/: generate.rs
crates/labelflair-cli/src/commands/generate/: labels_yml.rs
crates/labelflair-cli/tests/: commands.rs
crates/labelflair-cli/tests/commands/: generate.toml
crates/labelflair-cli/tests/commands/generate.in/: labelflair.toml
crates/labelflair-cli/tests/commands/generate.out/: labelflair.toml  labels.yml
crates/labelflair/src/: colors.rs  config.rs  label.rs  lib.rs
crates/labelflair/src/colors/: fixed.rs  tailwind.rs
crates/labelflair/src/config/: v1.rs
crates/labelflair/src/config/v1/: group.rs  label_variant.rs
