[workspace]
members = ["crates/*"]

# Opt-in to the latest feature resolver introduced in Rust 1.85 and Edition 2024
# https://doc.rust-lang.org/cargo/reference/resolver.html#resolver-versions
resolver = "3"

[workspace.package]
version = "0.0.0"
edition = "2024"

license = "Apache-2.0 OR MIT"
repository = "https://github.com/jdno/labelflair.git"

# Rust edition 2024 requires a minimum Rust version of 1.84.0
rust-version = "1.85.0"

[workspace.dependencies]
