[workspace]
members = ["crates/*"]

# Opt-in to the latest feature resolver introduced in Rust 1.85 and Edition 2024
# https://doc.rust-lang.org/cargo/reference/resolver.html#resolver-versions
resolver = "3"

[workspace.package]
version = "0.0.0"
edition = "2024"

license = "Apache-2.0 OR MIT"
repository = "https://github.com/jdno/labelflair.git"

# Rust edition 2024 requires a minimum Rust version of 1.84.0
rust-version = "1.85.0"

[workspace.dependencies]
clap = "4.5.45"
clawless = "0.2.0"
getset = "0.1.6"
indoc = "2.0.6"
labelflair = { path = "crates/labelflair", version = "0.0.0" }
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml_ng = "0.10.0"
toml = { version = "0.9.5", features = ["serde"] }
trycmd = "0.15.10"
typed-builder = "0.21.1"
typed-fields = { version = "0.5.2", features = ["serde"] }
