[package]
name = "labelflair"
description = "Generate colorful labels for GitHub Issues"

version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
getset = { workspace = true }
serde = { workspace = true }
typed-builder = { workspace = true }
typed-fields = { workspace = true }

[dev-dependencies]
indoc = { workspace = true }
toml = { workspace = true }
